--- a/Day06/vue-with-data/package.json
+++ b/Day06/vue-with-data/package.json
@@ -11,7 +11,8 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^1.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
